--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "deimsantafe/stg-cas-bundle",
+    "name": "stgbundle/cas-bundle",
     "type": "symfony-bundle",
     "description": "Bundle de cas para symfony 4.4",
     "homepage": "https://github.com/deimsantafe/stg-cas-bundle",
