--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,10 +1,10 @@
 services:
     phpcasguard.cas_service:
-        class: AlexandreT\Bundle\CasGuardBundle\Service\CasService
+        class: Stg\Bundle\CasGuardBundle\Service\CasService
         arguments:
            - '%cas_config%'
     phpcasguard.cas_authenticator:
-        class: AlexandreT\Bundle\CasGuardBundle\Security\CasAuthenticator
+        class: Stg\Bundle\CasGuardBundle\Security\CasAuthenticator
         arguments:
             - '@router'
             - '@phpcasguard.cas_service'
