--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/yaml": "~3.4|4.*|~5.0"
     },
     "autoload": {
-        "psr-4": { "AlexandreT\\Bundle\\CasGuardBundle\\": "" }
+        "psr-4": { "Stg\\Bundle\\CasGuardBundle\\": "" }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
