--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,7 +3,8 @@ services:
         class: Stg\Bundle\CasGuardBundle\Service\CasService
         arguments:
            - '%cas_config%'
-           - "%kernel.logs_dir%/%kernel.environment%.log"
+           - '%kernel.logs_dir%/%kernel.environment%.log'
+           - '@security.http_utils'
     phpcasguard.cas_authenticator:
         class: Stg\Bundle\CasGuardBundle\Security\CasAuthenticator
         arguments:
