Se optimiza llamadas al cas

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -9,3 +9,4 @@ services:
         class: Stg\Bundle\CasGuardBundle\Security\CasAuthenticator
         arguments:
             - '@phpcasguard.cas_service'
+            - '@security.helper'
