--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/deimsantafe/stg-cas-bundle",
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": ">=7.2.5",
         "jasig/phpcas": "~1.4",
 	    "symfony/security-bundle": "~5.4",
         "symfony/dependency-injection": "~5.4",
