--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-	    "symfony/security-bundle": ">=6.0",
-        "symfony/dependency-injection": ">=6.0",
-        "symfony/routing": ">=6.0",
+	    "symfony/security-bundle": "6.4.*",
+        "symfony/dependency-injection": "6.4.*",
+        "symfony/routing": "6.4.*",
         "apereo/phpcas": "^1.6"
     },
     "autoload": {
